--- a/vignettes/sample-evaluation.Rmd
+++ b/vignettes/sample-evaluation.Rmd
@@ -23,278 +23,268 @@ library(jfa)
 
 ## Introduction
 
-This vignette demonstrates how to evaluate a sample with the `evaluation()`
-function from the **jfa** package.
+Welcome to the 'Evaluating statistical audit samples' vignette of the **jfa**
+package. This page demonstrates how to evaluate the misstatement in an audit
+sample using the `evaluation()` function in package.
 
 <p align='center'><img src='evaluation.png' alt='evaluation' width='100%'></p>
 
-In auditing, the goal of the evaluation is typically to estimate the
-misstatement in the population based on a sample, or to test the misstatement in
-the population against a critical upper limit, referred to as the performance
-materiality.
+In auditing, the objective of evaluation is typically 1) to estimate the
+misstatement in the population based on a sample or 2) to test the misstatement
+against a critical upper limit, known as performance materiality.
 
 ## Required information
 
-Evaluating an audit sample using the `evaluation()` function requires that the
-sample data is available in one of two forms:
+Firstly, to evaluate an audit sample using the `evaluation()` function, the
+sample data must be available in one of two formats:
 
 - **Summary statistics:** This includes (a vector of) the number of items (`n`),
-  (a vector of) the sum of errors / taints (`x`) and optionally (a vector of)
-  the number of units in the population (`N.units`).
-- **Data:** A `data.frame` containing a numeric column with book values
-  (`values`), a numeric column with audit (true) values (`values.audit`) and
-  optionally a factor column indicating stratum membership (`strata`).
+  (a vector of) the sum of misstatements/taints (`x`) and optionally (a vector
+  of) the number of units in the population (`N.units`).
+- **Data:** A `data.frame` that contains a numeric column with book values
+  (`values)`, a numeric column with audit (i.e., true) values (`values.audit`),
+  and optionally a factor column indicating stratum membership (`strata`).
 
 By default, `evaluation()` estimates the population misstatement and returns a
-point estimate as well as a (`conf.level` $\times$ 100) percent confidence /
-credible interval around this estimate. However, in audit sampling, the
-population is typically subject to a certain maximum tolerable misstatement
-defined by the performance materiality $\theta_{max}$. Using the `materiality`
-argument, you can provide this critical value to the `evaluation()` function as
-a fraction. In addition to the estimation that is performed by default,
-specifying `materiality` triggers the comparison of two competing hypotheses.
-Which hypotheses are being compared depends on the input for the `alternative`
-argument: 
+point estimate as well as a confidence/credible interval around this estimate,
+expressed as a percentage (`conf.level` $\cdot$ 100). However, in audit
+sampling, the population is typically subject to a certain maximum tolerable
+misstatement defined by the performance materiality $\theta_{max}$. You can
+provide the performance materiality to the `evaluation()` function as a fraction
+using the `materiality` argument. In addition to the default estimation,
+specifying a value for `materiality` triggers the comparison of two competing
+hypotheses. The hypotheses being compared depend on the input for the
+`alternative` argument.
 
 * `alternative = "less"` (default): $H_1:\theta<\theta_{max}$ versus $H_0:\theta\geq\theta_{max}$
 * `alternative = "greater"`: $H_1:\theta>\theta_{max}$ versus $H_0:\theta\leq\theta_{max}$
 * `alternative = "two.sided"`: $H_1:\theta \neq\theta_{max}$ versus $H_0:\theta=\theta_{max}$
 
+Once the auditor has established the materiality (if applicable), they must make
+a decision on whether to stratify the population. Stratification is the process
+of dividing the population into smaller subgroups that contain similar items,
+referred to as strata, and selecting a sample from each stratum. In the
+following sections, we will demonstrate how to evaluate statistical audit
+samples, both stratified and non-stratified.
+
 ## Evaluation using summary statistics
+
+We first consider the scenario where the auditor does not have access to the
+sample data and wants to perform inference about the misstatement using summary
+statistics from the sample.
 
 ### Non-stratified samples
 
-In a non-stratified sampling procedure, the auditor does not take samples from
-different strata or subgroups in a population. An example of such a situation
-would be where the auditor is auditing the general ledger of a small business.
+In a non-stratified sampling approach, the auditor does not divide the population
+into different strata. This approach might be suitable when the auditor is
+auditing the general ledger of a small business and has substantiated that the
+population comprises homogeneous items, such as all items being employment
+contracts subject to a shared ensemble of control systems.
 
 #### Classical approach
 
-Classical hypothesis testing uses the *p*-value to make a decision about whether
-to reject the hypothesis $H_0$ or not. As an example, consider that an auditor
-wants to verify whether the population contains less than 5 percent misstatement,
-implying the hypotheses $H_1:\theta<0.05$ and $H_0:\theta\geq0.05$. They have
-taken a sample of 100 items, of which 1 contained an error. They set the
-significance level for the *p*-value to 0.05, implying that $p < 0.05$ will be
-enough to reject the hypothesis $H_0$. The call below evaluates the sample using
-a classical non-stratified evaluation procedure [@stewart_2012].
+Classical hypothesis testing employs the *p*-value to determine whether to
+reject the null hypothesis of material misstatement $H_0$. For instance,
+let's assume an auditor aims to confirm if the population contains less than
+five percent misstatement. This suggests the hypotheses $H_1$: $\theta <$ 0.05
+and $H_0$: $\theta \geq$ 0.05. The auditor selects a sample of $n$ = 100 items,
+with $k$ = 1 item containing a misstatement. They establish the significance
+level for the *p*-value (i.e., the sampling risk) at $\alpha$ = 0.05, indicating
+that a *p*-value below 0.05 will suffice to reject the null hypothesis. The
+following command evaluates the sample using a classical non-stratified
+evaluation method [@stewart_2012].
 
 ```{r}
 evaluation(materiality = 0.05, x = 1, n = 100)
 ```
 
-The output shows that the most likely error in the population is estimated to be
-1 / 100 = 1 percent and that the 95 percent (one-sided) confidence interval
-ranges from 0 percent to 4.74 percent. The output also shows that the *p*-value
-is lower than 0.05 implying that the hypothesis $H_0$ can be rejected. Hence,
-the auditor is able to conclude that the sample provides sufficient evidence to
-state with reasonable assurance that the population does not contain material
-misstatement.
+The output indicates that the most likely misstatement in the population is
+estimated to be $\frac{k}{n}$ = $\frac{1}{100}$ = 0.01, or 1 percent, and the
+95 percent (one-sided) confidence interval spans from 0 percent to 4.74 percent.
+It also reveals that the *p*-value is below 0.05, suggesting that the null
+hypothesis should be rejected. Consequently, the auditor can infer that the
+sample provides sufficient evidence to conclude with a reasonable degree of
+certainty that the population does not contain material misstatement.
 
 #### Bayesian approach
 
-Bayesian hypothesis testing uses the Bayes factor, $BF_{10}$ or $BF_{01}$, to
-make a statement about the evidence provided by the sample in support for one of
-the two hypotheses $H_1$ or $H_0$ [@derks_2021b]. As an example of how to
-interpret the Bayes factor, the value of $BF_{10} = 10$ (provided by the
-`evaluation()` function) can be interpreted as:
-*the data are 10 times more likely to have occurred under the hypothesis $H_1$ than under the hypothesis $H_0$*.
-$BF_{10} > 1$ indicates evidence in favor of $H_1$ and against $H_0$, while
-$BF_{10} < 1$ indicates evidence in favor of $H_0$ and against $H_1$. The
-`evaluation()` function returns the value for $BF_{10}$, but $BF_{01}$ can be
-computed as $\frac{1}{BF_{10}}$.
+Bayesian hypothesis testing employs the Bayes factor, either $BF_{10}$ or
+$BF_{01}$, to quantify the evidence that the sample provides in support of
+either of the two hypotheses $H_1$ or $H_0$ [@derks_2021b]. For instance, a
+Bayes factor value of $BF_{10}$ = 10 (provided by the `evaluation()` function)
+can be interpreted as the data being 10 times more likely under the hypothesis
+of tolerable misstatement $H_1$ than under the hypothesis of material
+misstatement $H_0$. A value of $BF_{10} >$ 1 indicates evidence in favor of
+$H_1$ and opposing $H_0$, while a value of $BF_{10} <$ 1 indicates evidence
+supporting $H_0$ and contradicting $H_1$. The `evaluation()` function returns
+the value for $BF_{10}$, but $BF_{01}$ can be calculated as $\frac{1}{BF_{10}}$.
 
-Consider the previous example of an auditor who wants to verify whether the
-population contains less than 5 percent misstatement, implying the hypotheses
-$H_1:\theta<0.05$ and $H_0:\theta\geq0.05$. They have taken a sample of 100
-items, of which 1 was found to contain a misstatement. The prior distribution is
-assumed to be a default *beta(1,1)* prior. The call below evaluates the sample
-using a Bayesian non-stratified evaluation procedure [@stewart_2013;
-@derks_2021].
+Consider the earlier example where an auditor wishes to confirm if the
+population contains less than five percent misstatement, suggesting the
+hypotheses $H_1$: $\theta <$ 0.05 and $H_0$: $\theta \geq$ 0.05. They have
+selected a sample of $n$ = 100 items, with $k$ = 1 item found to contain a
+misstatement. The prior distribution is presumed to be a default beta(1,1)
+prior. The subsequent call evaluates the sample using a Bayesian non-stratified
+evaluation procedure [@stewart_2013; @derks_2021].
 
 ```{r}
 evaluation(materiality = 0.05, x = 1, n = 100, method = "binomial", prior = TRUE)
 ```
 
-The output shows that the most likely error in the population is estimated to be
-1 / 100 = 1 percent and that the 95 percent (one-sided) credible interval ranges
-from 0 percent to 4.61 percent. The small difference between the classical and
-default Bayesian results is due to the prior distribution, which must be proper
-in order to calculate a Bayes factor (classical results can be emulated by
-constructing a prior with `method = "strict"` in the `auditPrior()` function).
-The Bayes factor in this case is shown to be $BF_{10}=515$, meaning that the
-data from the sample are about 515 times more likely to occur under the
-hypothesis of tolerable misstatement than under the hypothesis of material
-misstatement.
+The output indicates that the most likely misstatement in the population is
+estimated to be $\frac{k}{n}$ = $\frac{1}{100}$ = 0.01, or 1 percent, and the
+95 percent (one-sided) credible interval spans from 0 percent to 4.61 percent.
+The minor discrepancy between the classical and default Bayesian results in
+the upper limit can be attributed to the prior distribution, which needs to be
+proper for the calculation of a Bayes factor. Classical results can be
+replicated by formulating an improper prior distribution using
+`method = "strict"` in the `auditPrior()` function. The Bayes factor in this
+scenario is demonstrated to be $BF_{10}$ = 515, signifying that the sample data
+are approximately 515 times more likely to occur under the hypothesis of
+tolerable misstatement than under the hypothesis of material misstatement.
 
-Note that this is a very high Bayes factor for the little data that is observed.
-That is because the Bayes factor is dependent on the prior distribution for
-$\theta$. As a rule of thumb, when the prior distribution is highly conservative
-(as with `method = 'default'`) with respect to the hypothesis of tolerable
-misstatement, the Bayes factor tends to over quantify the evidence in favor of
-this hypothesis. You can mitigate this dependency by using a prior distribution
-that is impartial with respect to the hypotheses via `method = "impartial"` in
-the `auditPrior()` function [@derks_2022].
+It is important to note that this is a considerably high Bayes factor given the
+small amount of data observed. This can be explained by the fact that the Bayes
+factor is influenced by the prior distribution for $\theta$. The default prior
+distribution is **not** a good prior for hypothesis testing. As a general
+guideline, when the prior distribution is extremely conservative in relation to
+the hypothesis of tolerable misstatement (as with `method = 'default'`), the
+Bayes factor tends to overstate the evidence supporting this hypothesis. This
+dependency can be alleviated by employing a prior distribution that is impartial
+towards the hypotheses [@derks_2022], which can be achieved using
+`method = "impartial"` in the `auditPrior()` function.
 
 ```{r}
 prior <- auditPrior(materiality = 0.05, method = "impartial", likelihood = "binomial")
 evaluation(materiality = 0.05, x = 1, n = 100, prior = prior)
 ```
 
-The output shows that $BF_{10}=47$, implying that under the assumption of
-impartiality there is strong evidence for $H_1$, the hypothesis that the
-population contains misstatements lower than 5 percent of the population
-(tolerable misstatement). Since the two prior distributions both resulted in
-convincing Bayes factors, the results can be considered robust to the choice of
-prior distribution. Hence, the auditor is able to conclude that the sample
-provides convincing evidence to state that the population does not contain
+The output reveals that $BF_{10}$ = 47, suggesting that under the presumption of
+impartiality, there is substantial evidence for $H_1$, the hypothesis that the
+population contains misstatements less than five percent of the population
+(tolerable misstatement). Given that both prior distributions resulted in
+persuasive Bayes factors, the results can be deemed robust to the selection of
+prior distribution. Consequently, the auditor can deduce that the sample
+provides compelling evidence to conclude that the population does not contain
 material misstatement.
 
 ### Stratified samples
 
-In a stratified sampling procedure, the auditor takes samples from different
-strata (or subgroups) in a population. An example of such a situation would be
-a group audit where the audited organization consists of different components or
-branches. Stratification is relevant for the group auditor if they must form an
-opinion on the group as a whole because they must aggregate the samples taken by
-the component auditors. 
+In a stratified sampling method, the auditor extracts samples from various
+subgroups, or strata, within a population. This could be applicable in a group
+audit scenario where the audited organization comprises different components or
+branches. Stratification becomes pertinent for the group auditor when they need
+to form an opinion on the group as a whole, as they are required to consolidate
+the samples taken by the component auditors.
 
-As a data example, consider the `retailer` data set that comes with the package.
-The organization in question consists of 20 branches across the country. In each
-of the 20 strata, a component auditor has taken a statistical sample and
-reported the outcomes to the group auditor. 
+For instance, consider the `retailer` data set included in the package. The
+organization in question has twenty branches spread across the country. In each
+of the twenty strata, a component auditor has conducted a statistical sample and
+reported the results to the group auditor. 
 
 ```{r}
-data(retailer)
+data("retailer")
 print(retailer)
 ```
 
-In general, there are three approaches to evaluating a stratified sample: no
-pooling, complete pooling, and partial pooling [see @derks_2022b]. When
-using `evaluation()`, you must to indicate which type of pooling to use via the
-`pooling` argument. No pooling assumes no similarities between strata, which
-means that all strata are analyzed independently. Complete pooling assumes no
-difference between strata, which means that all data is aggregated and analyzed
-as a whole. Finally, partial pooling assumes differences and similarities
-between strata, which means that information can be shared between strata.
-Partial pooling (i.e., multilevel/hierarchical modeling) is a powerful
-technique that can result in more efficient population and stratum estimates but
-is currently only feasible when performing a Bayesian analysis. For this reason,
-this vignette only describes the Bayesian approach to stratified evaluation but
-going from this approach to a classical approach only requires setting
-`prior = FALSE`.
+Generally, there are two methodologies for evaluating a stratified sample: no
+pooling and partial pooling [see @derks_2022b]. When using the `evaluation()`
+function in a stratified sampling context, you need to specify the type of
+pooling to be used via its `pooling` argument. No pooling presumes no
+similarities between strata, implying that all strata are analyzed
+independently. Partial pooling presumes both differences and similarities
+between strata, implying that information can be shared between strata. This
+technique is also known as multilevel or hierarchical modeling and can lead to
+more efficient population and stratum estimates. However, it is currently only
+available in **jfa** when conducting a Bayesian analysis. For this reason, this
+vignette primarily describes the Bayesian approach to evaluating stratified
+audit samples. However, transitioning from a Bayesian approach to a classical
+approach only requires setting `prior = FALSE`.
 
-The number of units per stratum in the population can be provided with `N.units`
-to weigh the stratum estimates to determine population estimate. This is called
-poststratification. If `N.units` is not specified, each stratum is assumed to be
-equally represented in the population.
+The number of units (this can be items or monetary units depending on the audit
+objective) per stratum in the population can be supplied with `N.units` to weigh
+the stratum estimates for determining the population estimate. This process is
+known as poststratification. If `N.units` is not specified, it is assumed that
+each stratum is equally represented in the population.
 
 #### Approach 1: No pooling
 
-No pooling (`pooling = "none"`, default) assumes no similarities between strata.
-This means that the prior distribution specified through `prior` is applied
-independently for each stratum. This allows for independent estimates for the
-misstatement in each stratum but also results in a relatively high uncertainty
-in the population estimate. The call below evaluates the sample using a Bayesian
-stratified evaluation procedure, in which the stratum estimates are
-poststratified to arrive at the population estimate.
+The no pooling approach (`pooling = "none"`) is the default option and assumes
+there are no similarities between strata. This implies that the prior
+distribution, specified through `prior`, is applied independently in each
+stratum. This approach allows for independent estimates of the misstatement in
+each stratum, but for this reason it also results in a relatively high
+uncertainty in the population estimate. The following command evaluates the
+sample using a Bayesian stratified evaluation procedure, where the stratum
+estimates are poststratified to derive the population estimate. Note that it is
+important to set the seed via `set.seed()` because the posterior distribution is
+determined via sampling.
 
 ```{r}
-set.seed(1) # Important because the posterior distribution is determined via sampling
+set.seed(1)
 result_np <- evaluation(
   materiality = 0.05, method = "binomial",
-  n = retailer$samples, x = retailer$errors, N.units = retailer$items,
-  alternative = "two.sided", pooling = "none", prior = TRUE
+  n = retailer[["samples"]], x = retailer[["errors"]],
+  N.units = retailer[["items"]], pooling = "none",
+  alternative = "two.sided", prior = TRUE
 )
 summary(result_np)
 ```
 
-In this case, the output of the `summary()` function shows that the estimate of
-the misstatement in the population is 5.98 percent, with the 95 percent credible
-interval ranging from 4.28 percent to 8.22 percent. The stratum estimates differ
-substantially from each other but are relatively uncertain.
+In this scenario, the output of the `summary()` function indicates that the
+estimated misstatement in the population is 5.98 percent, with the 95 percent
+(two-sided) credible interval extending from 4.28 percent to 8.22 percent. The
+estimates for each stratum vary significantly from one another but exhibit
+relative uncertainty. They can be visualized via the call below to
+`plot(..., type = "estimates")`
 
 ```{r fig.align="center", fig.height=4, fig.width=6}
 plot(result_np, type = "estimates")
 ```
 
 The prior and posterior distribution for the population misstatement can be
-requested via the `plot()` function.
+obtained using the `plot(..., type = "posterior")` function.
 
 ```{r fig.align="center", fig.height=4, fig.width=6}
 plot(result_np, type = "posterior")
 ```
 
-#### Approach 2: Complete pooling
+#### Approach 2: Partial pooling
 
-Complete pooling (`pooling = "complete"`) assumes no differences between strata.
-This has the advantages that data from all strata can be aggregated, which
-decreases the uncertainty in the population estimate compared to the no
-pooling approach. However, the disadvantage of this approach is that it does
-not facilitate the distinction between between strata, as every stratum
-receives the same estimate equal to that of the population. The call below
-evaluates the sample using a Bayesian stratified evaluation procedure, in
-which the strata are assumed to be the same.
-
-```{r}
-result_cp <- evaluation(
-  materiality = 0.05, method = "binomial",
-  n = retailer$samples, x = retailer$errors, N.units = retailer$items,
-  alternative = "two.sided", pooling = "complete", prior = TRUE
-)
-summary(result_cp)
-```
-
-For example, the output of the `summary()` function shows that the estimate of
-the misstatement in the population is 4.47 percent, with the 95 percent credible
-interval ranging from 3.74 percent to 5.33 percent. Since the data is
-aggregated, the stratum estimates contain relatively little uncertainty.
-However, the probability of misstatement in stratum 20 (many misstatements)
-under this assumption is the same as that of stratum 15 (few misstatements).
-
-```{r fig.align="center", fig.height=4, fig.width=6}
-plot(result_cp, type = "estimates")
-```
-
-The prior and posterior distribution for the population misstatement can be
-requested via the `plot()` function.
-
-```{r fig.align="center", fig.height=4, fig.width=6}
-plot(result_cp, type = "posterior")
-```
-
-#### Approach 3: Partial pooling
-
-Finally, partial pooling (`pooling = "partial"`) assumes differences and
-similarities between strata. This allows the auditor to differentiate between
-strata, while also sharing information between the strata to reduce uncertainty
-in the population estimate. The call below evaluates the sample using a Bayesian
-stratified evaluation procedure, in which the stratum estimates are
-poststratified to arrive at the population estimate.
+The partial pooling approach (`pooling = "partial"`) presumes both differences
+and similarities between strata. This enables the auditor to share information
+among the strata to minimize uncertainty in the population estimate. The
+following call evaluates the sample using a Bayesian stratified evaluation
+procedure, where the stratum estimates are poststratified to derive the
+population estimate. Remember, it is important to set the seed via `set.seed()`
+to make the results reproducible.
 
 ```{r}
-set.seed(1) # Important because the posterior distribution is determined via sampling
+set.seed(1)
 result_pp <- evaluation(
   materiality = 0.05, method = "binomial",
-  n = retailer$samples, x = retailer$errors, N.units = retailer$items,
-  alternative = "two.sided", pooling = "partial", prior = TRUE
+  n = retailer[["samples"]], x = retailer[["errors"]],
+  N.units = retailer[["items"]], pooling = "partial",
+  alternative = "two.sided", prior = TRUE
 )
 summary(result_pp)
 ```
 
-In this case, the output shows that the estimate of the misstatement in the
-population is 4.16 percent, with the 95 percent credible interval ranging from
-3.30 percent to 5.29 percent. Note that this population estimate is
-substantially less uncertain than that of the no pooling approach. Note that,
-like in the no pooling approach, the stratum estimates are different from each
-other but lie closer together and are less uncertain.
+In this scenario, the output indicates that the estimated misstatement in the
+population is 4.16 percent, with the 95 percent credible interval extending from
+3.30 percent to 5.29 percent. Note that this population estimate is considerably
+less uncertain compared to the no pooling approach. Similarly to the no pooling
+approach, the stratum estimates differ from each other but are closer together
+and exhibit less uncertainty. This can be explained by the fact that the partial
+pooling approach allows for information to be shared between strata. The stratum
+estimates can be visualized via a call to `plot(..., type = "estimates")`.
 
 ```{r fig.align="center", fig.height=4, fig.width=6}
 plot(result_pp, type = "estimates")
 ```
 
 The prior and posterior distribution for the population misstatement can be
-requested via the `plot()` function.
+obtained using the `plot(..., type = "posterior")` function.
 
 ```{r fig.align="center", fig.height=4, fig.width=6}
 plot(result_pp, type = "posterior")
@@ -302,40 +292,45 @@ plot(result_pp, type = "posterior")
 
 ## Evaluation using data
 
-For this example, we take the `allowances` that set that comes with the package.
-This data set contains 3500 financial statement line items, each with a booked
-value `bookValue` and, for illustrative purposes, and audited (true) value
-`auditValue`. Since the focus of this vignette is the evaluation stage in the
-audit, the sample is already indicated in the data set. The performance
-materiality in this example is set to 5 percent.
+In this example, we will demonstrate how to evaluate a stratified sample using a
+data set. We will use the `allowances` data set that is included in the package.
+This data set comprises $N$ = 3500 subsidy declarations from municipalities.
+Each line item has a recorded value book value (column `bookValue`) and an
+audited value (column `auditValue`), which is the true value for the purpose of
+this illustration. The data set already identifies the items that have been
+audited as part of the sample in the column `times`. sampled. In this scenario,
+we will be performing estimation and therefore do not specify the `materiality`
+argument in the `evaluation()` function.
 
 ```{r}
-data(allowances)
+data("allowances")
 head(allowances)
 ```
 
 ### Non-stratified samples
 
-Evaluating a non-stratified sample using data requires specification of the
-`data`, `values` and `values.audit` arguments. The input for these arguments is
-the name of the specific column in `data`.
+To evaluate a non-stratified sample using data, you need to specify the `data`,
+`values`, and `values.audit` arguments. The input for these arguments should be
+the name of the corresponding column in the input for the `data` argument.
 
 #### Classical approach
 
-The call below evaluates the `allowances` sample using a classical
-non-stratified evaluation procedure.
+The command below evaluates the `allowances` sample using a classical
+non-stratified evaluation approach. Note that the sample is automatically
+separated from the population because the `times` value for items not in the
+sample is `0`.
 
 ```{r}
-x <- evaluation(
-  materiality = 0.05, data = allowances,
-  values = "bookValue", values.audit = "auditValue", times = "times"
+evaluation(
+  data = allowances, times = "times",
+  values = "bookValue", values.audit = "auditValue"
 )
-summary(x)
 ```
 
-In this case, the output shows that the estimate of the misstatement in the
-population is 15.77 percent, with the 95 percent (one-sided) confidence interval
-ranging from 0 percent to 17.5 percent.
+In this instance, the output indicates that the estimated misstatement in the
+population is 15.77 percent. The 95 percent (one-sided) confidence interval
+extends from 0 percent to 17.5 percent. More detailed information can be
+obtained via the `summary()` function.
 
 #### Bayesian approach
 
@@ -344,49 +339,60 @@ evaluation procedure.
 
 ```{r}
 x <- evaluation(
-  materiality = 0.05, data = allowances,
-  values = "bookValue", values.audit = "auditValue", times = "times",
+  data = allowances, times = "times",
+  values = "bookValue", values.audit = "auditValue",
   prior = TRUE
 )
-summary(x)
 ```
 
 The output shows that the estimate of the misstatement in the population is
 15.76 percent, with the 95 percent (one-sided) credible interval ranging from 0
-percent to 17.49 percent.
+percent to 17.49 percent. More detailed information can be obtained via
+`summary()` and the prior and posterior distribution can be obtained by a
+call to `plot(..., type = "posterior")`.
+
+```{r fig.align="center", fig.height=4, fig.width=6}
+plot(x, type = "posterior")
+```
 
 ### Stratified samples
 
-Evaluating a stratified sample using data requires specification of the `data`,
-`values`, `values.audit` and `strata` arguments in the `evaluation()` function.
-In this case, the units are monetary and calculated by aggregating the book
-values of the items in each stratum.
+To evaluate a stratified sample using a data set, you need to specify the
+`data`, `values`, `values.audit`, and `strata` arguments in the `evaluation()`
+function. The input for `N.units` is once again optional. In this example, the
+units are monetary, determined by summing up the book values of the items within
+each stratum. For instance, we can see that stratum two is the largest, with
+a total value of $2,792,814.33 and stratum five is the smallest, with a total
+value of $96,660.53.
 
 ```{r}
 N.units <- aggregate(allowances$bookValue, list(allowances$branch), sum)$x
+print(data.frame(N.units))
 ```
 
 #### Classical approach
 
-The call below evaluates the `allowances` sample using a classical stratified
-evaluation procedure, in which the stratum estimates are poststratified to
-arrive at the population estimate.
+The following command evaluates the `allowances` sample using a classical
+stratified evaluation method. In this process, the estimates from each stratum
+are poststratified to derive the estimate for the entire population. Note that
+for computational reasons it is important to set a seed here via `set.seed()`.
 
 ```{r}
 set.seed(1)
-x <- evaluation(
-  materiality = 0.05, data = allowances,
-  values = "bookValue", values.audit = "auditValue", strata = "branch", times = "times",
-  N.units = N.units, alternative = "two.sided"
+evaluation(
+  data = allowances, times = "times",
+  values = "bookValue", values.audit = "auditValue",
+  N.units = N.units, strata = "branch",
+  alternative = "two.sided"
 )
-summary(x)
 ```
 
-In this case, the output shows that the estimate of the misstatement in the
-population is 14.72 percent, with the 95 percent confidence interval ranging
-from 12.55 percent to 18.28 percent. The precision of the population estimate is
-3.56 percent. The stratum estimates can be seen in the output of the `summary()`
-function and are visualized below.
+In this instance, the output reveals that the estimated misstatement in the
+population is 14.72 percent. The 95 percent confidence interval spans from
+12.55 percent to 18.28 percent. The precision of the population estimate is
+therefore 3.56 percent. The estimates for each stratum are visualized below. For
+more detailed information, including the actual stratum estimates, you can use
+the `summary()` function.
 
 ```{r fig.align="center", fig.height=4, fig.width=6}
 plot(x, type = "estimates")
@@ -394,11 +400,11 @@ plot(x, type = "estimates")
 
 #### Bayesian approach
 
-Bayesian inference can improve upon the estimates of the classical approach by
-pooling information between strata where possible. The call below evaluates the
-`allowances` sample using a Bayesian stratified evaluation procedure,
-in which the stratum estimates are poststratified to arrive at the population
-estimate.
+Bayesian inference can enhance the estimates obtained from the classical
+approach by pooling information across strata where feasible. The following
+command evaluates the `allowances` sample using a Bayesian stratified evaluation
+method. In this process, the estimates from each stratum are pooled and
+poststratified to derive the estimate for the entire population.
 
 ```{r}
 set.seed(1)
@@ -407,21 +413,23 @@ x <- evaluation(
   values = "bookValue", values.audit = "auditValue", strata = "branch", times = "times",
   N.units = N.units, alternative = "two.sided", prior = TRUE
 )
-summary(x)
+print(x)
 ```
 
-The output shows that the estimate of the misstatement in the population is
-15.64 percent, with the 95 percent credible interval ranging from 13.48 percent
-to 18.1 percent. The precision of the population estimate is 2.46 percent, which
-is lower than that of the classical approach. The stratum estimates can be seen
-in the output of the `summary()` function and are visualized below.
+The output indicates that the estimated misstatement in the population is
+15.64 percent. The 95 percent credible interval spans from 13.48 percent to
+18.1 percent. The precision of the population estimate is therefore 2.46
+percent, which is lower than that of the classical approach. The estimates for
+each stratum are visualized below using the `plot(..., type = "estimates)`
+command but their actual values can be once again be obtained using the
+`summary()` function.
 
 ```{r fig.align="center", fig.height=4, fig.width=6}
 plot(x, type = "estimates")
 ```
 
 The prior and posterior distribution for the population misstatement can be
-requested via the `plot()` function.
+obtained via the `plot(..., type = "posterior")` function.
 
 ```{r fig.align="center", fig.height=4, fig.width=6}
 plot(x, type = "posterior")
